--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript">
 		var list = '';
 		reqwest({
-			url: 'https://api.github.com/search/repositories?q=accepting%20pull%20requests|seekingcontributors+in:readme&callback=?',
+			url: 'https://api.github.com/search/repositories?q=seekingcontributors%20OR%20accepting%20pull%20requests+in:readme&callback=?&per_page=100',
 			type: 'jsonp',
 			success: function (response) {
 				var project;
